# spamir.ai

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  NOTICE  README.md  pyproject.toml
.github/workflows/: delete-untagged-containers.yaml  deploy-image.yaml
docker/base/: Dockerfile
docker/models/: Dockerfile
